--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -100,3 +100,17 @@
   align-items: center;
   justify-content: center;
 }
+
+/* Register page */
+
+.register {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  height: 70vh;
+}
+
+form {
+  margin-top: 15px;
+}
