--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -100,3 +100,8 @@
   align-items: center;
   justify-content: center;
 }
+
+.product-link {
+  text-decoration: none !important;
+  color: black !important;
+}
